--- a/app/res/layout/screen_connect_password_verify.xml
+++ b/app/res/layout/screen_connect_password_verify.xml
@@ -37,7 +37,8 @@
             android:textSize="18sp"
             android:textStyle="bold"/>
 
-        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+        <TextView
+                android:textStyle="bold"
             android:id="@+id/connect_password_verify_message"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
