--- a/app/res/layout/screen_connect_verify.xml
+++ b/app/res/layout/screen_connect_verify.xml
@@ -25,7 +25,8 @@
                 android:textSize="@dimen/text_larger"
                 android:textStyle="bold"/>
 
-            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+            <TextView
+                android:textStyle="bold"
                 android:id="@+id/connect_verify_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -63,7 +64,8 @@
 
             </LinearLayout>
 
-            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+            <TextView
+                android:textStyle="bold"
                 android:id="@+id/connect_verify_or"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
