--- a/app/res/layout/select_install_mode_fragment.xml
+++ b/app/res/layout/select_install_mode_fragment.xml
@@ -50,7 +50,8 @@
                     android:text="@string/connect_button_logged_in"
                     android:visibility="gone" />
 
-                <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                <TextView
+                android:textStyle="bold"
                     android:id="@+id/login_or"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
