--- a/app/res/layout/view_job_card.xml
+++ b/app/res/layout/view_job_card.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-            android:id="@+id/tv_job_discrepation"
+            android:id="@+id/tv_job_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -44,7 +44,7 @@
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_job_discrepation" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_description" />
 
 
         <org.commcare.views.connect.connecttextview.ConnectBoldTextView
@@ -55,7 +55,7 @@
             android:textColor="@color/connect_grey"
             android:textSize="12sp"
             android:visibility="visible"
-            app:layout_constraintTop_toBottomOf="@+id/tv_job_discrepation"
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_description"
             app:layout_constraintEnd_toEndOf="parent"
             tools:visibility="visible" />
 
