--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -84,5 +84,6 @@
         android:id="@+id/home_gridview_buttons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+        android:nestedScrollingEnabled="false"
+        android:scrollbars="vertical" />
 </LinearLayout>
