--- a/app/res/navigation/nav_graph_connectid.xml
+++ b/app/res/navigation/nav_graph_connectid.xml
@@ -131,7 +131,8 @@
         <action
             android:id="@+id/action_connectid_message_to_connectid_phone_verify"
             app:destination="@id/connectid_phone_verify"
-            app:popUpTo="@id/connectid_message" />
+            app:popUpTo="@id/connectid_signup_fragment"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_connectid_message_to_connectid_user_deactivate_otp_verify"
             app:destination="@id/connectid_user_deactivate_otp_verify"
@@ -144,7 +145,9 @@
             app:destination="@id/connectid_phoneNo" />
         <action
             android:id="@+id/action_connectid_message_to_connectid_secondary_phone_fragment"
-            app:destination="@id/connectid_secondary_phone_fragment" />
+            app:destination="@id/connectid_secondary_phone_fragment"
+            app:popUpTo="@id/connectid_signup_fragment"
+            app:popUpToInclusive="true"/>
         <argument
             android:name="title"
             app:argType="string" />
